# NovoTempEstimate

./: .gitignore  README.md  demo_training.py  pyproject.toml  requirements.txt
data/: readme.md
papers/: dauparas2022_extracted.txt  dauparas2022_proteinmpnn_extracted.txt  dauparas2022_supplement_extracted.txt  temstapro_paper_extracted.txt
scripts/: download_data.py  download_paper.py  evaluate_model.py  predict_temperature.py  train_cnn_model.py  train_model.py  train_unified.py
src/novotempestimate/: __init__.py  cnn_model.py  cnn_trainer.py  data_reader.py  encoding.py  model.py  model_factory.py  mpnn_encoder.py  mpnn_model.py  optimization.py  peptide_encoder.py  positional_encoder.py  trainer.py
tests/: __init__.py  test_data_reader.py  test_integration.py  test_peptide_encoder.py
